web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web-service
  namespace: cpc-test-dev
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: cpc-web-dev
  ports:
   - port: 80
