Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcm-in-dev
  namespace: tcm-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
    networking.gke.io/load-balancer-class: "gce-multi-cluster"
    cloud.google.com/load-balancer-type: "Internal"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800s"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: tcm-sv-dev
            port:
              number: 80
